// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LinkCard Component Snapshot Tests > renders the complete component 1`] = `
<div>
  <a
    class="no-underline"
    href="https://ovh.com"
    rel="noreferrer"
    target="_blank"
  >
    <div
      class="_card_dzuf6_2 _card--neutral_dzuf6_14 w-full h-full p-[1rem]"
      data-ods="card"
    >
      <div
        class="flex flex-col h-full"
      >
        <img
          alt="offer"
          class="max-w-full my-3 mx-auto"
          src="https://www.ovhcloud.com/sites/default/files/styles/offer_range_card/public/2021-06/1886_AI_Notebook1_Hero_600x400.png"
        />
        <div
          class="flex flex-row leading-[28px]"
        >
          <h4
            class="_text--heading-4_1aw48_31 text-[--ods-color-primary-500]"
            data-ods="text"
          >
            NAS
          </h4>
          <span
            class="ml-[10px]"
          >
            <span
              class="_badge_vpjtq_2 _badge--information_vpjtq_23 _badge--md_vpjtq_56 mr-1"
              data-ods="badge"
            >
              Cloud computing
            </span>
            <span
              class="_badge_vpjtq_2 _badge--information_vpjtq_23 _badge--md_vpjtq_56 mr-1"
              data-ods="badge"
            >
              Beta
            </span>
          </span>
        </div>
        <h3
          class="_text--heading-3_1aw48_25 mb-[8px]"
          data-ods="text"
        >
          Titre du produit
        </h3>
        <p
          class="_text--paragraph_1aw48_54 m-0 p-0 mb-4"
          data-ods="text"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        </p>
        <div
          class="mt-auto"
        >
          <a
            class="_link_1y3p4_2"
            data-ods="link"
            tab-index="-1"
          >
            En savoir plus
            <span
              class="_icon_10c23_2 _icon--arrow-right_10c23_34"
              data-ods="icon"
              role="presentation"
            />
          </a>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`LinkCard Component Snapshot Tests > renders the component with badges 1`] = `
<div>
  <a
    class="no-underline"
    href="https://ovh.com"
    rel="noreferrer"
    target="_blank"
  >
    <div
      class="_card_dzuf6_2 _card--neutral_dzuf6_14 w-full h-full p-[1rem]"
      data-ods="card"
    >
      <div
        class="flex flex-col h-full"
      >
        <div
          class="flex flex-row leading-[28px]"
        >
          <h4
            class="_text--heading-4_1aw48_31 text-[--ods-color-primary-500]"
            data-ods="text"
          >
            NAS
          </h4>
          <span
            class="ml-[10px]"
          >
            <span
              class="_badge_vpjtq_2 _badge--information_vpjtq_23 _badge--md_vpjtq_56 mr-1"
              data-ods="badge"
            >
              Cloud computing
            </span>
            <span
              class="_badge_vpjtq_2 _badge--information_vpjtq_23 _badge--md_vpjtq_56 mr-1"
              data-ods="badge"
            >
              Beta
            </span>
          </span>
        </div>
        <h3
          class="_text--heading-3_1aw48_25 mb-[8px]"
          data-ods="text"
        >
          Titre du produit
        </h3>
        <p
          class="_text--paragraph_1aw48_54 m-0 p-0 mb-4"
          data-ods="text"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        </p>
        <div
          class="mt-auto"
        >
          <a
            class="_link_1y3p4_2"
            data-ods="link"
            tab-index="-1"
          >
            En savoir plus
            <span
              class="_icon_10c23_2 _icon--arrow-right_10c23_34"
              data-ods="icon"
              role="presentation"
            />
          </a>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`LinkCard Component Snapshot Tests > renders the component with image 1`] = `
<div>
  <a
    class="no-underline"
    href="https://ovh.com"
    rel="noreferrer"
    target="_blank"
  >
    <div
      class="_card_dzuf6_2 _card--neutral_dzuf6_14 w-full h-full p-[1rem]"
      data-ods="card"
    >
      <div
        class="flex flex-col h-full"
      >
        <img
          alt="offer"
          class="max-w-full my-3 mx-auto"
          src="https://www.ovhcloud.com/sites/default/files/styles/offer_range_card/public/2021-06/1886_AI_Notebook1_Hero_600x400.png"
        />
        <div
          class="flex flex-row leading-[28px]"
        >
          <h4
            class="_text--heading-4_1aw48_31 text-[--ods-color-primary-500]"
            data-ods="text"
          >
            NAS
          </h4>
        </div>
        <h3
          class="_text--heading-3_1aw48_25 mb-[8px]"
          data-ods="text"
        >
          Titre du produit
        </h3>
        <p
          class="_text--paragraph_1aw48_54 m-0 p-0 mb-4"
          data-ods="text"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        </p>
        <div
          class="mt-auto"
        >
          <a
            class="_link_1y3p4_2"
            data-ods="link"
            tab-index="-1"
          >
            En savoir plus
            <span
              class="_icon_10c23_2 _icon--arrow-right_10c23_34"
              data-ods="icon"
              role="presentation"
            />
          </a>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`LinkCard Component Snapshot Tests > renders the component with texts 1`] = `
<div>
  <a
    class="no-underline"
    href="https://ovh.com"
    rel="noreferrer"
    target="_blank"
  >
    <div
      class="_card_dzuf6_2 _card--neutral_dzuf6_14 w-full h-full p-[1rem]"
      data-ods="card"
    >
      <div
        class="flex flex-col h-full"
      >
        <div
          class="flex flex-row leading-[28px]"
        >
          <h4
            class="_text--heading-4_1aw48_31 text-[--ods-color-primary-500]"
            data-ods="text"
          >
            NAS
          </h4>
        </div>
        <h3
          class="_text--heading-3_1aw48_25 mb-[8px]"
          data-ods="text"
        >
          Titre du produit
        </h3>
        <p
          class="_text--paragraph_1aw48_54 m-0 p-0 mb-4"
          data-ods="text"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        </p>
        <div
          class="mt-auto"
        >
          <a
            class="_link_1y3p4_2"
            data-ods="link"
            tab-index="-1"
          >
            En savoir plus
            <span
              class="_icon_10c23_2 _icon--arrow-right_10c23_34"
              data-ods="icon"
              role="presentation"
            />
          </a>
        </div>
      </div>
    </div>
  </a>
</div>
`;
